<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="click.dummer.imagesms.ScrollingActivity">

    <item
        android:id="@+id/action_read_inbox"
        android:title="@string/read_in"
        android:icon="@mipmap/inbox"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_read_outbox"
        android:title="@string/read_out"
        android:icon="@mipmap/outbox"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_bigger"
        android:title="@string/img_up"
        app:showAsAction="never" />

    <item android:id="@+id/action_smaller"
        android:title="@string/img_down"
        app:showAsAction="never" />

    <item android:id="@+id/action_take_pic"
        android:title="@string/take_pic"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_website"
        android:title="@string/website"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
