<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="quality"
        android:defaultValue="50"
        android:entries="@array/quality_names"
        android:entryValues="@array/quality_values"
        android:summary="@string/quality_summary"
        android:title="@string/quality" />

    <ListPreference
        android:key="scale"
        android:defaultValue="50"
        android:entries="@array/scale_names"
        android:entryValues="@array/scale_values"
        android:summary="@string/scale_summary"
        android:title="@string/scale" />

    <EditTextPreference
        android:defaultValue="10"
        android:inputType="numberDecimal"
        android:key="display_limit"
        android:numeric="integer"
        android:title="@string/display_limit" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="as_gif"
        android:title="@string/prefgif" />

    <EditTextPreference
        android:key="send_to"
        android:inputType="phone"
        android:defaultValue="#100*"
        android:title="@string/send_to" />

</PreferenceScreen>
